--- a/build_info.html
+++ b/build_info.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>о здании</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <style media="screen">
   .frst_part{
@@ -146,7 +146,7 @@
   </head>
   <body>
     <div class="cursor"></div>
-    
+
     <nav>
         <a id="s1" href="index.html"></a>
         <a  id="s2" href="visiting.html">посещение</a>
