--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>музей «impress»</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="javascript/javascript.js"></script>
@@ -257,6 +257,7 @@ input[type="email"]:focus{
     display: grid;
     grid-area:1/2/2/3;
 }
+}
 
  /* .input_box{
    width: 50vw;
@@ -305,8 +306,7 @@ input[type="email"]:focus{
 
  }
 
-
- input{
+ .member_popup input{
    display: inline-block;
    text-align: start;
    margin-left: 12.5vw;
@@ -437,15 +437,21 @@ input[type="email"]:focus{
     <div class="dop">
     </div>
     <footer>
-
       <div class="mail">
+          <p>Подписаться на рассылку</p>
+          <input type="email" name="email" value="" placeholder="tellyourname@gmail.com">
+          <button type="button" name="arrow"></button>
+      </div>
+      <!-- <div class="mail">
           <p>Подписаться на рассылку</p>
           <div class="input_box">
             <input type="email" name="email" value="" id="f_email" placeholder="" >
             <label for="f_email">почта</label>
           </div>
+          <input type="email" name="email" value="" placeholder="tellyourname@gmail.com">
+
           <button type="button" name="arrow"></button>
-      </div>
+      </div> -->
       <div class="inf_blocks">
         <p>
         часы работы:<br>
