--- a/museum_choice.html
+++ b/museum_choice.html
@@ -2,24 +2,92 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>книжка</title>
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="javascript/slick/slick.css">
+    <link rel="stylesheet" href="javascript/slick/slick-theme.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="javascript/javascript.js"></script>
+    <script src="javascript/slick/slick.min.js"></script>
     <style media="screen">
-      .book{
-        background-image: url("images/museum_info/book.png");
-
+        body{
+          background-color: #c4c4c4;
+        }
+      .bk_box{
+        /* width: 70vw;
+        height: 800px;
+        overflow: hidden;
+        box-sizing: border-box; */
+        /* background-color: black; */
+        margin: auto;
+        width: 90%;
+        height: 500px;
+        /* color: black; */
+        margin: auto;
+        /* margin-bottom: 60px; */
       }
-      .build{
-        background-image: url("images/museum_info/build.png");
-      }
-      a{
+      /* a{
         width: 50vw;
         height: 100vh;
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
+      } */
+      .slide {
+        width: 100%;
+        height: 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: contain;
+        /* background-image: url("images/book/bk1.jpg") */
+        width: 100vw;
+        height: 800px;
       }
+//  //
+      .bk1{background-image: url("images/book/bk1.png");}
+      .bk2{background-image: url("images/book/bk2.png");}
+      .bk3{background-image: url("images/book/bk3.png");}
+      .bk4{background-image: url("images/book/bk4.png");}
+      .bk5{background-image: url("images/book/bk5.png");}
+      .bk6{background-image: url("images/book/bk6.png");}
+      .bk7{background-image: url("images/book/bk7.png");}
+      .bk8{background-image: url("images/book/bk8.png");}
+      .bk9{background-image: url("images/book/bk9.png");}
+      .bk10{background-image: url("images/book/bk10.png");}
+//    //
+      .bk11{background-image: url("images/book/bk11.png");}
+      .bk12{background-image: url("images/book/bk12.png");}
+      .bk13{background-image: url("images/book/bk13.png");}
+      .bk14{background-image: url("images/book/bk14.png");}
+      .bk15{background-image: url("images/book/bk15.png");}
+      .bk16{background-image: url("images/book/bk16.png");}
+      .bk17{background-image: url("images/book/bk17.png");}
+      .bk18{background-image: url("images/book/bk18.png");}
+      .bk19{background-image: url("images/book/bk19.png");}
+      .bk10{background-image: url("images/book/bk10.png");}
+//  //
+      .bk21{background-image: url("images/book/bk21.png");}
+      .bk22{background-image: url("images/book/bk22.png");}
+      .bk23{background-image: url("images/book/bk23.png");}
+      .bk24{background-image: url("images/book/bk24.png");}
+      .bk25{background-image: url("images/book/bk25.png");}
+      /* #bk26{background-image: url("images/book/bk26.jpg");} */
+      .bk27{background-image: url("images/book/bk27.png");}
+      .bk28{background-image: url("images/book/bk28.png");}
+      .bk29{background-image: url("images/book/bk29.png");}
+      .bk20{background-image: url("images/book/bk20.png");}
+//  //
+      #bk31{background-image: url("images/book/bk31.png");}
+      #bk32{background-image: url("images/book/bk32.png");}
+      #bk33{background-image: url("images/book/bk33.png");}
+      #bk34{background-image: url("images/book/bk34.png");}
+      #bk35{background-image: url("images/book/bk35.png");}
     </style>
+    <script type="text/javascript">
+      // $(document).ready(function(){
+      //   $('.bk_box').slick();
+      //   });
+    </script>
   </head>
   <body>
     <div class="cursor"></div>
@@ -32,7 +100,45 @@
         <a id="s6"  href="museum_info.html">о музее</a>
     </nav>
     <main>
+      <!-- <img src="images/book/bk35.png" alt=""> -->
+      <div class="bk_box">
+        <div id="" class="slide bk1"></div>
+        <div id="" class="slide bk2"></div>
+        <div id="" class="slide bk3"></div>
+        <div id="" class="slide bk4"></div>
+        <div id="" class="slide bk5"></div>
+        <div id="" class="slide bk6"></div>
+        <div id="" class="slide bk7"></div>
+        <div id="" class="slide bk8"></div>
+        <div id="" class="slide bk9"></div>
+        <!-- <div id="bk10" class="slide"></div>
+        <div id="bk11" class="slide"></div>
+        <div id="bk12" class="slide"></div>
+        <div id="bk13" class="slide"></div>
+        <div id="bk14" class="slide"></div>
+        <div id="bk15" class="slide"></div>
+        <div id="bk16" class="slide"></div>
+        <div id="bk17" class="slide"></div>
+        <div id="bk18" class="slide"></div>
+        <div id="bk19" class="slide"></div>
+        <div id="bk20" class="slide"></div>
+        <div id="bk21" class="slide"></div>
+        <div id="bk22" class="slide"></div>
+        <div id="bk23" class="slide"></div>
+        <div id="bk24" class="slide"></div>
+        <div id="bk25" class="slide"></div> -->
+        <!-- <div id="bk26" class="slide"></div> -->
+        <!-- <div id="bk27" class="slide"></div>
+        <div id="bk28" class="slide"></div>
+        <div id="bk29" class="slide"></div>
+        <div id="bk30" class="slide"></div>
+        <div id="bk31" class="slide"></div>
+        <div id="bk32" class="slide"></div>
+        <div id="bk33" class="slide"></div>
+        <div id="bk34" class="slide"></div>
+        <div id="bk35" class="slide"></div> -->
 
+      </div>
     </main>
     <footer>
 
