--- a/events.html
+++ b/events.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>события</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
     <script src="javascript/jQuere.3.5.1.js"></script>
