--- a/try/member.html
+++ b/try/member.html
@@ -42,6 +42,11 @@
         background-color: blue;
         /* transition: .4s all ease; */
       }
+      .bk{
+        width: 300px;
+        height: 300px;
+        background-image: url("../images/book/bk20.png");
+      }
     </style>
     <script type="text/javascript">
     // let xPrev = 0;
@@ -83,9 +88,16 @@ $('a').click(function(e) {
 
     <div class="cursor" id=""></div>
 
-<div class="box">
+<div class="box"></div>
+
+<img src="../images/book/bk10.png" alt="">
+<div class="bk">
 
 </div>
+
+
+
+
 
   </body>
 </html>
