--- a/index.html
+++ b/index.html
@@ -340,7 +340,11 @@ input[type="email"]:focus{
           },500);
       });
       ///////
+      $(".unity").click(function(){
+              let url = "dialog.html";
+              location.href = "dialog.html";
 
+            })
 
       /////////
       $(window).resize(function(){
