--- a/try/member.html
+++ b/try/member.html
@@ -78,12 +78,27 @@ $('a').click(function(e) {
     window.location.href = '../images/wallpapers/phone/w_4.png';
 });
 
+
+
 });
 
 
     </script>
   </head>
   <body>
+
+    <a href="../images/wallpapers/phone.zip" download>
+      <img src="../images/dop.png" alt="dop">
+    </a>
+
+
+
+
+
+
+
+    <input type="file" name="" value="" id="dwn">
+    <a href="https://github.com/Kovriki/impress_web/blob/main/images/wallpapers/phone/w_1.png" download="">Download</a>
     <a href="no-script.html">Download now!</a>
 
     <div class="cursor" id=""></div>
