--- a/dialog.html
+++ b/dialog.html
@@ -64,7 +64,9 @@
       <div class="shape w5 h1"></div>
       <div class="shape w2 h1"></div>
     </div>
-
+    <a href="images/wallpapers/phone.zip" download>
+      <img src="images/dop.png" alt="dop">
+    </a>
     </main>
     <footer>
 
