--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@ input[type="email"]:focus{
       });
       ///////
       $(".unity").click(function(){
-              let url = "try/member.html";
-              location.href = "try/member.html";
+              let url = "dialog.html";
+              location.href = "dialog.html";
             })
 
       /////////
