--- a/dialog.html
+++ b/dialog.html
@@ -64,8 +64,12 @@
       <div class="shape w5 h1"></div>
       <div class="shape w2 h1"></div>
     </div>
-    <a href="images/dop.png" download>
+    <a href="images/wallpapers/phone.zip" download>
       <img src="images/dop.png" alt="dop">
+    </a>
+    <a href="https://kovriki.itch.io/dialog">
+      <img src="images/dop.png" alt="dop">
+
     </a>
     </main>
     <footer>
