--- a/index.html
+++ b/index.html
@@ -3,377 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>музей «impress»</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="stylesheets/index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="javascript/javascript.js"></script>
 
     <style media="screen">
-
-.bg{
-  width: 70%;
-  height: 70%;
-  background-color: white;
-  position: relative;
-  margin: auto;
-}
-.green{
-  background-color: #E0E2D0;
-}
-
-/* .news:hover{
-  background: radial-gradient(circle, rgba(255,255,255,0) 63%, rgba(0,255,25,1) 100%);
-  transition: .3s all ease;
-} */
-
-
-.menu-non-active, .icon-close{
-  display:none;
-}
-
-.member_popup{
-  position: fixed;
-  width: 570px;
-  height: 700px;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  margin:auto;
-  z-index:30;
-  top: calc(50vh - 350px);
-  left: calc(50vw - 295px);
-  /* justify-content: center; */
-  justify-content: space-around;
-  align-items: center;
-}
-
-.gif_box{
-  width: 500px;
-  height: 300px;
-  background-color: blue;
-  display: flex;
-  margin-top: 40px;
-}
-.exit{
-  width:33px;
-  height: 33px;
-  position: absolute;
-  top:0;
-  right: 0;
-  border: 1px black solid;
-  transition: .4s all ease;
-}
-.exit:hover{
-  background-color: black;
-  transition: .4s all ease;
-}
-.black{
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  display: block;
-  top: 0;
-  bottom:0;
-  right: 0;
-  left: 0;
-  background-color: #000;
-  opacity: .4;
-  backdrop-filter: blur(70px);
-  -webkit-backdrop-filter: blur(70px);
-
-  z-index:20;
-}
-.member_popup button {
-  margin-bottom: 40px;
-}
-.member_popup p {
-  line-height: 1em;
-}
-/* input {
-  padding-left: 15px;
-}
-input:focus {
-  font-size: 0.3em;
-
-}
-input[type="text"]:focus,
-input[type="email"]:focus{
-  font-size: 0.3em;
-
-} */
-.prisoedin{
-  width: 300px;
-  height: 72px;
-  border:1px black solid;
-  font-family: "Pragmatica_Italic";
-  font-size: 1.2em;
-  transition: .2s;
-  background-color: white;
-
-}
-.prisoedin:hover {
-  background:black;
-  color: white;
-  transition: .4s;
-}
-.hidden {
-  opacity: 0;
-}
-.fade {
-  display: none;
-}
-.dop {
-  width: 150px;
-  height: 70px;
-  background-image: url("images/dop.png");
-  position: absolute;
-  display: block;
-  top:20vw;
-  left: 0;
-  background-position: center;
-  animation: move 4s line infinite;
-  z-index: 25;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-@keyframes move {
-  0%{
-    top: calc(20vw + 70px);
-  }
-  100%{
-    right: calc(0 + 150px);
-    }
-
-}
-@media only screen and (max-width: 768px)  {
-  /* telefon4ik */
-  nav{
-    nav{
-      height: 144px;
-      grid-template-rows: 1;
-      grid-template-columns: 1fr 1fr;;
-    }
-  }
-  #s1{
-    width: 50vw;
-  }
-  #s2, #s3, #s4, #s5, #s6 {
-    display: none;
-  }
-  body{
-    font-size: 1.3em;transition: 1s all ease;
-  }
-  .index{
-    grid-template-columns:  1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr auto;
-  }
-  .news, .wallpaper, .fest,  .unity {
-    width: 100vw;
-    height: 25em;
-  }
-  .wallpaper{
-    grid-area: 2/1/3/2;
-  }
-  .fest{
-    grid-area: 2/1/4/2;
-  }
-  .event{
-    grid-area: 2/1/3/2;
-  }
-  .unity {
-    grid-area: 3/1/4/3;
-  }
-  .unity p, .news p {
-    padding-left: 2em;
-    padding-right: 2em;
-  }
-  .questions{
-    grid-area: 4/1/5/3;
-    overflow: hidden;
-  }
-  #s1{
-    border:1px solid black;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  #s1,#s2, #s3, #s4, #s5, #s6, .icon-close{
-    display: block;
-    width: 50vw;
-    height: 25vh;
-
-  }
-  #s2{ grid-area:2/1/3/2; }
-  #s3{ grid-area:2/2/3/3; }
-  #s4{ grid-area:3/1/4/2; }
-  #s5{ grid-area:3/2/4/3; }
-  #s6{ grid-area:4/1/5/2; }
-  nav{
-    width: 100vw;
-  height: 100vh;
-    transition: all .4s ease;
-    display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 25vh 25vh 25vh 25vh;
-  }
-  .menu-non-active{
-    width: 50vw;
-    height: 25vh;
-    display: grid;
-    box-sizing: border-box;
-        grid-template-columns: 1fr 1fr;
-        transition: all .4s ease;
-
-  }
-  .menu-non-active #s1{
-    grid-area: 1/1/2/2;
-  }
-  .menu-non-active .icon-close{
-    grid-area: 1/2/2/3;
-  }
-
-  .fade{
-    display: none;
-  }
-  .hidden{
-    /* opacity: 0; */
-    height: 25vh;
-    transition: .8s all ease;
-  }
-  .fade{
-    display: none;
-  }
-  footer {
-    justif
-    height: 100vh;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(5, 1fr);
-  }
-  footer .mail {
-    grid-area: 1/1/2/2;
-  }
-  .icon-more,.icon-close{
-    width: 50vw;
-    height: 25vh;
-    background-color: blue;
-    display: grid;
-    grid-area:1/2/2/3;
-}
-}
-
- /* .input_box{
-   width: 50vw;
-   height: 40px;
-   border:1px solid black;
- }
- .input{
-   border:none;
- } */
-
- .input_box,
- .member_popup .input_box {
-   width: 32vw;
-   height: 45px;
-   border: 1px solid black;
-   display: flex;
-   flex-direction: row;
-   align-items: baseline;
-   margin-left: 12.5vw;
-   /* padding-top: 10px; */
-   /* display: flex; */
-   /* flex-direction: row; */
-   font-size: 1.2em;
-   border: 1px solid black;
-    display: flex;
-    width: 500px;
-    border: 1px solid black;
-
-}
-
-
- label {
-   order: -1;
-   padding-left: 5px;
-   transition: all 0.3s ease-in;
-   /* transform: translateY(20px); */
-   pointer-events: none;
-   display: flex;
-   order: -1;
- }
-
- input:focus + label {
-   font-size: .6em;
-   transform: translateY(-16px);
-   border: 1px solid black;
-
- }
-
- .member_popup input{
-   display: inline-block;
-   text-align: start;
-   margin-left: 12.5vw;
-   vertical-align: middle;
-   color: black;
-   margin-left: 3vw;
-   margin-left: 10px;
-   padding-left: 50px;
-   /* border: none; */
-   border: 1px solid black;
-
- }
- .member_popup input, .w{
-   border: 1px solid black;
- }
- .member_popup p{
-   width: 80%;
-
- }
-
-
     </style>
-
-
     <script type="text/javascript">
     $(document).ready(function(){
-      $(".prisoedin, .black, .exit").click(function(){
-          $(".member_popup, .black").addClass("hidden")
-          setTimeout(function(){
-            $(".member_popup, .black").addClass("fade")
-          },500);
-      });
-      ///////
-      $(".unity").click(function(){
-              let url = "dialog.html";
-              location.href = "dialog.html";
-            })
-
-      /////////
-      $(window).resize(function(){
-      let width = $(window).width();
-      if(width <= 768){
-        $('nav').addClass('fade');
-        $('nav').addClass('hidden');
-        $('nav').addClass('hidden');
-      }
-      })
-
-        .resize();
-
-        $(".icon-close").click(function(){
-          // $(".menu-items").addClass("fade")
-          $(this).parent().addClass("hidden")
-          setTimeout(function(){
-            $("nav, .menu-non-active").toggleClass("fade");
-          },600);
-          setTimeout(function(){
-            if($("nav").hasClass("fade")){
-              $(".menu-non-active").removeClass("hidden");
-            } else {
-              $("nav").removeClass("hidden");
-            }
-            // $("menu-non-active").removeClass("fade");
-          },800);
-        })
-
-
 });
     </script>
   </head>
@@ -381,8 +20,12 @@ input[type="email"]:focus{
     <div class="cursor"></div>
     <div class="member_popup">
       <div class="exit"></div>
-      <div class="gif_box"><img src="images/cat_gif.gif" alt="This is an animated gif image, but it does not move"/></div>
-        <p>Присоединяйся к Impress News и получи бесплатный доступ к лекциям от мемологов.</p>
+      <div class="gif_box">
+          <img class="c_1" src="images/cat_gif.gif" alt="This is an animated gif image, but it does not move"/>
+          <img class="c_2 fade" src="images/cat-comp2.gif" alt="">
+      </div>
+      <p class="cp_1">Присоединяйся к&nbspImpress News и&nbspполучи бесплатный доступ к&nbspлекциям от&nbspмемологов.</p>
+      <p class="cp_2 fade">Нас ждут приятные новости!;)</p>
 
       <input type="text" name="name" value="" placeholder="имя" class="w">
       <!-- <div class="input_box">
@@ -413,13 +56,13 @@ input[type="email"]:focus{
     </nav>
     <main class="index">
         <div class="news">
-        <h5>о музее</h5>
-        <p>Impress* — первый музей шрифтовых иллюзий, спроектированный под руководством дизайнеров. </p>
+        <h5>о&nbspмузее</h5>
+        <p>Impress* — первый музей шрифтовых иллюзий, спроектированный под&nbspруководством дизайнеров. </p>
       </div>
       <div class="news event green">
         <div class="bg">
           <h5>subdiv\<br>\sculpt</h5>
-          <a class="mini_link" href="">выставка</a>
+          <a class="mini_link" href="subdiv.html">выставка</a>
         </div>
 
       </div>
@@ -431,17 +74,18 @@ input[type="email"]:focus{
         <a class="mini_link" href="">обои</a>
       </div>
       <div class="unity">
-        <h5>здесь и сейчас</h5>
-          <p>Возможности музея выходят на новый уровень и покоряют новые миры.
-              Открывается доступ к новой выставке, которую сможет посетить каждый из своего дома</p>
+
+        <h5>здесь и&nbspсейчас</h5>
+          <p>Возможности музея выходят на&nbspновый уровень и&nbspпокоряют новые миры.
+              Открывается доступ к&nbspновой выставке, которую сможет посетить каждый из&nbspсвоего дома</p>
+              <div class="dop"></div>
+
       </div>
-      <div class="questions"><h6> Кто мы? Откуда мы пришли? Куда мы идём?</h6><div>
+      <div class="questions"><h6> Кто&nbspмы? Откуда мы пришли? Куда мы идём?</h6><div>
     </main>
-    <div class="dop">
-    </div>
     <footer>
       <div class="mail">
-          <p>Подписаться на рассылку</p>
+          <p>Подписаться на&nbspрассылку</p>
           <input type="email" name="email" value="" placeholder="tellyourname@gmail.com">
           <button type="button" name="arrow"></button>
       </div>
