--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://kovriki.github.io/impress_web/">
+    <meta property="og:title" content="{музей «impress»}">
+    <meta property="og:description" content="{impress — музей шрифтовых иллюзий, место, где вы увидите невообразимые деформации, изменения и преображения.}">
+    <meta property="og:image" content="{<url>images/image_url.png</url>}">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@SiteTwitter">
+    <meta name="twitter:creator" content="@sapegin">
+
     <title>музей «impress»</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheets/style.css">
