--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="utf-8">
 
-    <meta property="og:type" content="article">
+    <meta property="og:type" content="website">
     <meta property="og:url" content="https://kovriki.github.io/impress_web/">
-    <meta property="og:title" content="{музей «impress»}">
-    <meta property="og:description" content="{impress — музей шрифтовых иллюзий, место, где вы увидите невообразимые деформации, изменения и преображения.}">
-    <meta property="og:image" content="{<url>images/image_url.png</url>}">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@SiteTwitter">
-    <meta name="twitter:creator" content="@sapegin">
+    <meta property="og:title" content="музей «impress»">
+    <meta property="og:description" content="impress — музей шрифтовых иллюзий, место, где вы увидите невообразимые деформации, изменения и преображения.">
+    <meta property="og:image" content="https://github.com/Kovriki/impress_web/blob/main/images/image_url.png?raw=true">
+
 
     <title>музей «impress»</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
