--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-
+    <link rel="icon" type="image/png" href="images/favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <meta name="author" content="">
+    <meta name="description" content="">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kovriki.github.io/impress_web/">
     <meta property="og:title" content="музей «impress»">
@@ -11,7 +15,6 @@
 
 
     <title>музей «impress»</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
