--- a/shop.html
+++ b/shop.html
@@ -2,6 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="images/favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="author" content="">
+    <meta name="description" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://kovriki.github.io/impress_web/">
+    <meta property="og:title" content="музей «impress»">
+    <meta property="og:description" content="impress — музей шрифтовых иллюзий, место, где вы увидите невообразимые деформации, изменения и преображения.">
+    <meta property="og:image" content="https://github.com/Kovriki/impress_web/blob/main/images/image_url.png?raw=true">
+
+
     <title>магазин</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/shop.css">
