--- a/events.html
+++ b/events.html
@@ -274,7 +274,9 @@
 
 
       <div class="event_link">зимняя афиша</div>
-      <iframe src="https://kovriki.github.io/interactive_web_poster/" width="100%" height="900px" align="center">
+
+      <iframe src="https://kovriki.github.io/WEB-posterr/" width="100%" height="900px" align="center">
+      <!-- <iframe src="https://kovriki.github.io/interactive_web_poster/" width="100%" height="900px" align="center"> -->
       <!-- <iframe src="interactive_web_poster/index.html" width="100%" height="900px" align="center"> -->
       </iframe>
 
