--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="images/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <meta name="author" content="">
     <meta name="description" content="">
     <meta property="og:type" content="website">
@@ -60,7 +60,7 @@
         <a id="s1" href="index.html"></a>
         <a href="#" class="icon-close"></a>
         <a  id="s2" href="visiting.html">посещение</a>
-        <a id="s3"  href="afisha.html">подарочки</a>
+        <a id="s3"  href="afisha.html">акция</a>
         <a id="s4"  href="events.html">события</a>
         <a id="s5"  href="shop.html">магазин</a>
         <a id="s6"  href="museum_info.html">о музее</a>
