--- a/index.html
+++ b/index.html
@@ -48,12 +48,8 @@
     </div>
     <div class="black"></div>
 
-
-
-
-
     <div class="menu-non-active">
-      <a id="s1"href="#"></a>
+      <a id="s1"href="index.html"></a>
       <a href="#" class="icon-close"></a>
     </div>
     <nav>
