--- a/museum_info.html
+++ b/museum_info.html
@@ -170,6 +170,11 @@
     .blur{
       /* z-index: 20 */
     }
+    @media only screen and (max-width: 768px) {
+      main{flex-direction: column;}
+      .box,.blur{ width: 100vw;
+      height: 50vh;}
+    }
     </style>
     <script type="text/javascript">
       $(document).ready(function(){
@@ -192,10 +197,15 @@
   <body>
     <div class="cursor"></div>
 
+    <div class="menu-non-active">
+      <a id="s1"href="index.html"></a>
+      <a href="#" class="icon-close"></a>
+    </div>
     <nav>
         <a id="s1" href="index.html"></a>
+        <a href="#" class="icon-close"></a>
         <a  id="s2" href="visiting.html">посещение</a>
-        <a id="s3"  href="afisha.html">афиша</a>
+        <a id="s3"  href="https://kovriki.github.io/interactive_web_poster/">акция</a>
         <a id="s4"  href="events.html">события</a>
         <a id="s5"  href="shop.html">магазин</a>
         <a id="s6"  href="museum_info.html">о музее</a>
