--- a/shop_items/rubashka.html
+++ b/shop_items/rubashka.html
@@ -42,13 +42,18 @@
   <body>
     <div class="cursor"></div>
 
+    <div class="menu-non-active">
+      <a id="s1"href="index.html"></a>
+      <a href="#" class="icon-close"></a>
+    </div>
     <nav>
-        <a id="s1" href="../index.html"></a>
-        <a  id="s2" href="../visiting.html">посещение</a>
-        <a id="s3"  href="../afisha.html">афиша</a>
-        <a id="s4"  href="../events.html">события</a>
-        <a id="s5"  href="../shop.html">магазин</a>
-        <a id="s6"  href="../museum_info.html">о музее</a>
+        <a id="s1" href="index.html"></a>
+        <a href="#" class="icon-close"></a>
+        <a  id="s2" href="visiting.html">посещение</a>
+        <a id="s3"  href="https://kovriki.github.io/interactive_web_poster/">акция</a>
+        <a id="s4"  href="events.html">события</a>
+        <a id="s5"  href="shop.html">магазин</a>
+        <a id="s6"  href="museum_info.html">о музее</a>
     </nav>
     <main>
       <div class="text_box">
