--- a/build_info.html
+++ b/build_info.html
@@ -15,7 +15,11 @@
 
 
     <title>о здании</title>
+
     <link rel="stylesheet" href="stylesheets/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="javascript/javascript.js"></script>
+
     <style media="screen">
   .frst_part{
     width: 100vw;
@@ -159,13 +163,13 @@
   <body>
     <div class="cursor"></div>
 
-    <div class="menu-non-active">
+    <!-- <div class="menu-non-active">
       <a id="s1"href="index.html"></a>
       <a href="#" class="icon-close"></a>
-    </div>
+    </div> -->
     <nav>
         <a id="s1" href="index.html"></a>
-        <a href="#" class="icon-close"></a>
+        <!-- <a href="#" class="icon-close"></a> -->
         <a  id="s2" href="visiting.html">посещение</a>
         <a id="s3"  href="https://kovriki.github.io/interactive_web_poster/">акция</a>
         <a id="s4"  href="events.html">события</a>
