--- a/museum_choice.html
+++ b/museum_choice.html
@@ -114,7 +114,7 @@
         $('.bk_box').slick({
           dots: true,
           infinite: true,
-          speed: 500,
+          speed: 200,
           fade: true,
           cssEase: 'linear'
         });
@@ -122,13 +122,15 @@
     </script>
   </head>
   <body>
-    <div class="menu-non-active">
+    <div class="cursor"></div>
+
+    <!-- <div class="menu-non-active">
       <a id="s1"href="index.html"></a>
       <a href="#" class="icon-close"></a>
-    </div>
+    </div> -->
     <nav>
         <a id="s1" href="index.html"></a>
-        <a href="#" class="icon-close"></a>
+        <!-- <a href="#" class="icon-close"></a> -->
         <a  id="s2" href="visiting.html">посещение</a>
         <a id="s3"  href="https://kovriki.github.io/interactive_web_poster/">акция</a>
         <a id="s4"  href="events.html">события</a>
