--- a/visiting.html
+++ b/visiting.html
@@ -18,11 +18,11 @@
     <link rel="stylesheet" href="stylesheets/style.css">
       <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
-    <script src="http://code.jquery.com/ui/1.8.17/jquery-ui.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <!-- <script src="http://code.jquery.com/ui/1.8.17/jquery-ui.min.js"></script> -->
 
 
-    <script src="http://code.jquery.com/jquery.min.js"></script>
+    <!-- <script src="http://code.jquery.com/jquery.min.js"></script> -->
 
 
     <script src="javascript/javascript.js"></script>
@@ -58,6 +58,10 @@
         margin-right: 0;
         justify-content: space-evenly;
         align-items: center;
+        border: none;
+      }
+      .g_inf p, .g_inf h6{
+        border:none;
       }
       #i1{background-image: url("images/visiting/01.png");}
       #i2{background-image: url("images/visiting/02.png");}
@@ -108,6 +112,20 @@
       #i43{background-image: url("images/visiting/43.png");}
       #i44{background-image: url("images/visiting/44.png");}
 .drag{}
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    .g_inf{
+      width: 100vw;
+      height: 10em;
+    }
+  }
+
+
+  @media only screen and (max-width: 768px)  {
+    .g_inf{
+      width: 100vw;
+      height: 10em;
+    }
+  }
     </style>
     <script>$('.drag').draggable();</script>
 
@@ -123,13 +141,13 @@
   <body>
     <div class="cursor"></div>
 
-    <div class="menu-non-active">
+    <!-- <div class="menu-non-active">
       <a id="s1"href="index.html"></a>
       <a href="#" class="icon-close"></a>
-    </div>
+    </div> -->
     <nav>
         <a id="s1" href="index.html"></a>
-        <a href="#" class="icon-close"></a>
+        <!-- <a href="#" class="icon-close"></a> -->
         <a  id="s2" href="visiting.html">посещение</a>
         <a id="s3"  href="https://kovriki.github.io/interactive_web_poster/">акция</a>
         <a id="s4"  href="events.html">события</a>
