--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <a class="mini_link" href="event_items/pole_z.html">билеты</a>
       </div>
       <div class="wallpaper">
-        <a class="mini_link" href="">обои</a>
+        <a class="mini_link" href="download.html">обои</a>
       </div>
       <div class="unity">
 
