--- a/download.html
+++ b/download.html
@@ -15,7 +15,32 @@
 
 
     <title>обои</title>
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <!-- <link rel="stylesheet" href="stylesheets/index.css"> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="javascript/javascript.js"></script>
 <style media="screen">
+.m_wrapper{
+  width: 100vw;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.mokup{
+  width: 20vw;
+  height: 38vw;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.m_wrapper a{  width: 20vw;
+  height: 38vw;
+  margin: 3em;
+  /* height: calc(10vw * 1.5); */
+}
 
 </style>
 <script type="text/javascript">
@@ -25,10 +50,10 @@
   <body>
     <div class="cursor"></div>
 
-    <div class="menu-non-active">
+    <!-- <div class="menu-non-active">
       <a id="s1"href="index.html"></a>
       <a href="#" class="icon-close"></a>
-    </div>
+    </div> -->
     <nav>
         <a id="s1" href="index.html"></a>
         <a href="#" class="icon-close"></a>
@@ -39,7 +64,30 @@
         <a id="s6"  href="museum_info.html">о музее</a>
     </nav>
     <main>
+        <div class="m_wrapper">
+          <a href="images/wallpapers/phone/w_4.png" download>
+            <img class="mokup" src="images/wallpapers/phone/ph_07.png" alt="sugumi">
+          </a>
+          <a href="images/wallpapers/phone/w_2.png" download>
+            <img class="mokup" src="images/wallpapers/phone/ph_04.png" alt="sugumi">
+          </a>
+          <a href="images/wallpapers/phone/w_3.png" download>
+            <img class="mokup" src="images/wallpapers/phone/ph_05.png" alt="sugumi">
+          </a>
+          <a href="images/wallpapers/phone/w_1.png" download>
+            <img class="mokup" src="images/wallpapers/phone/ph_06.png" alt="sugumi">
+          </a>
+          <a href="images/wallpapers/phone/w_6.png" download>
+            <img class="mokup" src="images/wallpapers/phone/ph_02.png" alt="sugumi">
+          </a>
 
+          <a href="images/wallpapers/phone/w_5.png" download>
+            <img class="mokup" src="images/wallpapers/phone/ph_03.png" alt="sugumi">
+          </a>
+          <a href="images/wallpapers/phone/w_7.png" download>
+            <img class="mokup" src="images/wallpapers/phone/ph_01.png" alt="sugumi">
+          </a>
+        </div>
     </main>
     <footer>
 
