--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <script src="javascript/javascript.js"></script>
 
     <style media="screen">
+
+    @media only screen and (max-width: 1024px) {
+    .member_popup, .black{
+     display: none  ;
+       }
+     }
     </style>
     <script type="text/javascript">
     $(document).ready(function(){
