--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 
     @media only screen and (max-width: 1024px) {
     .member_popup, .black{
-     display: none  ;
+     display: none;
        }
+     }
+     .c_2{
+      width: 100%;
      }
     </style>
     <script type="text/javascript">
