--- a/events.html
+++ b/events.html
@@ -78,7 +78,7 @@
 
     <div class="event_box p2">
       <div class="cover">
-        <a class="event_link" href="#">“поле зрения” — летний фестиваль</a>
+        <a class="event_link" href="enent_items/pole_z.html">“поле зрения” — летний фестиваль</a>
         <div class="image_box" id="pole_01"></div>
       </div>
       <div class="image_box" id="pole_02"></div>
